src/rust/dcmfx_cli/tests/snapshots/list__with_duplicate_directory_windows.snap
---
source: dcmfx_cli/tests/list.rs
expression: get_stderr(assert)
---
Error: Input directory '..\..\..\test\assets\pydicom' is specified more than once
