src/rust/dcmfx_cli/tests/snapshots/list__with_invalid_directory.snap
---
source: dcmfx_cli/tests/list.rs
expression: get_stderr(assert)
---
Error: "missing-directory" is not a directory
