src/rust/dcmfx_cli/tests/snapshots/list__with_missing_selected_data_elements.snap
---
source: dcmfx_cli/tests/list.rs
expression: get_stderr(assert)
---

-----
DICOM data error listing DICOM file '../../../test/assets/fo-dicom/DICOMDIR.dcm'

  Error: Tag not present
  Tag: (0008,0018)
  Name: SOP Instance UID
  Path: (0008,0018) SOP Instance UID
